--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,10 +6,10 @@ license="All Rights Reserved, DragN0007"
 modId="dragnpets"
 version="${1.0}"
 displayName="DragN's Livestock Overhaul: Pets Addon!"
-logoFile="dlo_logo.png"
+logoFile="pets_overhaul_logo.png"
 authors="DragN0007"
 description='''
-An overhaul for pets!
+An addon to Livestock Overhaul, for pets!
 '''
 [[dependencies.dragnpets]]
 modId = "forge"
