--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,12 +4,14 @@ license="All Rights Reserved, DragN0007"
 #issueTrackerURL="https://discord.gg/2WznNTtVac"
 [[mods]]
 modId="dragnpets"
-version="${1.0}"
+version="${0.9}"
 displayName="DragN's Livestock Overhaul: Pets Addon!"
 logoFile="pets_overhaul_logo.png"
 authors="DragN0007"
 description='''
 An addon to Livestock Overhaul, for pets!
+
+[DEV-BETA; Not for public distribution.]
 '''
 [[dependencies.dragnpets]]
 modId = "forge"
