--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,7 @@ plugins {
 
 apply plugin: 'org.spongepowered.mixin'
 
-
-version = '1.20.1-0.9-DevBETA'
+version = '1.20.1-1.0'
 group = mod_group_id
 
 base {
