--- a/src/main/resources/data/minecraft/tags/entity_types/powder_snow_walkable_mobs.json
+++ b/src/main/resources/data/minecraft/tags/entity_types/powder_snow_walkable_mobs.json
@@ -2,6 +2,8 @@
   "replace": false,
   "values": [
     "dragnpets:o_fox",
-    "dragnpets:husky"
+    "dragnpets:husky",
+
+    "dragnpets:dog_sled"
   ]
 }
