--- a/build.gradle
+++ b/build.gradle
@@ -93,11 +93,17 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:1.20.1-47.2.0"
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.1:4.4.4')
 //    implementation fg.deobf("curse.maven:dragns-livestock-overhaul-1131669:6442113")
     implementation fg.deobf('com.dragn0007.dragnlivestock:Livestock_Overhaul_1.20.1:1.20.1-2.8')
     implementation fg.deobf("curse.maven:jade-324717:5876199")
     implementation fg.deobf("curse.maven:xaeros-minimap-263420:6012833")
+}
+
+mixin {
+    add sourceSets.main, 'mixins.dragnpets.refmap.json'
+    config 'mixins.dragnpets.json'
 }
 
 tasks.named('processResources', ProcessResources).configure {
