--- a/src/main/resources/assets/dragnpets/geo/cat/manx.geo.json
+++ b/src/main/resources/assets/dragnpets/geo/cat/manx.geo.json
@@ -7,22 +7,22 @@
 				"texture_width": 64,
 				"texture_height": 64,
 				"visible_bounds_width": 4,
-				"visible_bounds_height": 2.5,
-				"visible_bounds_offset": [0, 0.75, 0]
+				"visible_bounds_height": 3,
+				"visible_bounds_offset": [0, 0.5, 0]
 			},
 			"bones": [
 				{
 					"name": "body",
-					"pivot": [0, 8.51563, -1.64434]
+					"pivot": [0, 7.09636, -1.37028]
 				},
 				{
 					"name": "body_piv",
 					"parent": "body",
-					"pivot": [0, 8.33131, 3.88552],
+					"pivot": [0, 6.94276, 3.23793],
 					"cubes": [
 						{
-							"origin": [0.18352, 5.18042, -8.28502],
-							"size": [2.00636, 6.5554, 4.69437],
+							"origin": [0.16127, 4.32535, -6.89585],
+							"size": [1.6553, 5.44617, 3.89531],
 							"inflate": 0.05,
 							"uv": {
 								"north": {"uv": [32, 9], "uv_size": [2, 7]},
@@ -34,8 +34,8 @@
 							}
 						},
 						{
-							"origin": [-2.05296, 5.6248, -7.6936],
-							"size": [4.10592, 6.1003, 3.03775],
+							"origin": [-1.7108, 4.68733, -6.41133],
+							"size": [3.4216, 5.08358, 2.53146],
 							"uv": {
 								"north": {"uv": [4, 21], "uv_size": [4, 6]},
 								"east": {"uv": [19, 26], "uv_size": [3, 6]},
@@ -46,8 +46,8 @@
 							}
 						},
 						{
-							"origin": [-2.18988, 5.18042, -8.28502],
-							"size": [2.00636, 6.5554, 4.69437],
+							"origin": [-1.81657, 4.32535, -6.89585],
+							"size": [1.6553, 5.44617, 3.89531],
 							"inflate": 0.05,
 							"uv": {
 								"north": {"uv": [32, 16], "uv_size": [2, 7]},
@@ -59,8 +59,8 @@
 							}
 						},
 						{
-							"origin": [-2.05296, 5.16169, -4.7606],
-							"size": [4.10592, 6.5634, 5.97074],
+							"origin": [-1.7108, 4.30141, -3.96717],
+							"size": [3.4216, 5.4695, 4.97562],
 							"uv": {
 								"north": {"uv": [10, 14], "uv_size": [4, 7]},
 								"east": {"uv": [0, 0], "uv_size": [6, 7]},
@@ -71,9 +71,11 @@
 							}
 						},
 						{
-							"origin": [-2.13648, 5.18869, 0.97134],
-							"size": [4.27297, 6.51681, 5.82836],
+							"origin": [-1.77207, 4.23224, 0.81778],
+							"size": [3.54414, 5.41401, 4.8403],
 							"inflate": 0.05,
+							"pivot": [0, 6.84276, 3.23793],
+							"rotation": [-2.5, 0, 0],
 							"uv": {
 								"north": {"uv": [17, 0], "uv_size": [4, 7]},
 								"east": {"uv": [0, 7], "uv_size": [6, 7]},
@@ -88,12 +90,12 @@
 				{
 					"name": "neck",
 					"parent": "body",
-					"pivot": [-0.04229, 8.99623, -7.84861],
+					"pivot": [-0.03524, 7.49686, -6.54051],
 					"rotation": [70, 0, 0],
 					"cubes": [
 						{
-							"origin": [-2.28283, 7.784, -10.43605],
-							"size": [4.4811, 5.07526, 5.21629],
+							"origin": [-1.20236, 6.48667, -6.89671],
+							"size": [2.33425, 4.22938, 2.54691],
 							"uv": {
 								"north": {"uv": [31, 4], "uv_size": [3, 5]},
 								"east": {"uv": [31, 23], "uv_size": [3, 5]},
@@ -102,17 +104,31 @@
 								"up": {"uv": [39, 10], "uv_size": [3, 3]},
 								"down": {"uv": [13, 42], "uv_size": [3, -3]}
 							}
+						},
+						{
+							"origin": [-1.18881, 6.38871, -8.44413],
+							"size": [2.30715, 4.61463, 2.77561],
+							"pivot": [-0.03524, 8.02124, -6.36607],
+							"rotation": [-17.5, 0, 0],
+							"uv": {
+								"north": {"uv": [25, 5], "uv_size": [3, 6]},
+								"east": {"uv": [26, 11], "uv_size": [3, 6]},
+								"south": {"uv": [16, 26], "uv_size": [3, 6]},
+								"west": {"uv": [26, 17], "uv_size": [3, 6]},
+								"up": {"uv": [39, 13], "uv_size": [3, 3]},
+								"down": {"uv": [16, 42], "uv_size": [3, -3]}
+							}
 						}
 					]
 				},
 				{
 					"name": "collar",
 					"parent": "neck",
-					"pivot": [0.85039, 10.59206, -11.12939],
+					"pivot": [0.70866, 7.82672, -9.27449],
 					"cubes": [
 						{
-							"origin": [-2.39862, 10.59418, -10.66974],
-							"size": [4.71268, 0.92437, 5.62082],
+							"origin": [-1.49885, 7.82848, -8.69145],
+							"size": [2.92723, 0.77031, 4.48402],
 							"uv": {
 								"north": {"uv": [6, 63], "uv_size": [5, 1]},
 								"east": {"uv": [0, 63], "uv_size": [6, 1]},
@@ -127,12 +143,12 @@
 				{
 					"name": "head",
 					"parent": "neck",
-					"pivot": [-0.0038, 12.23594, -6.24838],
+					"pivot": [-0.00317, 10.19662, -5.20698],
 					"rotation": [-65, 0, 0],
 					"cubes": [
 						{
-							"origin": [-1.8865, 9.73924, -9.54572],
-							"size": [3.76538, 3.73429, 3.26218],
+							"origin": [-1.57208, 8.11603, -7.95477],
+							"size": [3.13782, 3.11191, 2.71848],
 							"uv": {
 								"north": {"uv": [29, 0], "uv_size": [4, 4]},
 								"east": {"uv": [33, 0], "uv_size": [3, 4]},
@@ -147,12 +163,12 @@
 				{
 					"name": "right_ear",
 					"parent": "head",
-					"pivot": [-0.17627, 13.00128, -6.94026],
+					"pivot": [-0.14689, 10.8344, -5.78355],
 					"rotation": [0, 0, -10],
 					"cubes": [
 						{
-							"origin": [-2.23099, 13.15895, -7.21014],
-							"size": [1.67435, 2.6131, 0.34867],
+							"origin": [-1.95916, 10.96579, -6.00845],
+							"size": [1.59529, 2.17758, 0.29056],
 							"uv": {
 								"north": {"uv": [40, 36], "uv_size": [2, 3]},
 								"east": {"uv": [15, 27], "uv_size": [1, 3]},
@@ -167,12 +183,12 @@
 				{
 					"name": "left_ear",
 					"parent": "head",
-					"pivot": [0.16866, 13.00128, -6.94026],
+					"pivot": [0.14055, 10.8344, -5.78355],
 					"rotation": [0, 0, 10],
 					"cubes": [
 						{
-							"origin": [0.54904, 13.15895, -7.21014],
-							"size": [1.67435, 2.6131, 0.34867],
+							"origin": [0.35753, 10.96579, -6.00845],
+							"size": [1.59529, 2.17758, 0.29056],
 							"uv": {
 								"north": {"uv": [41, 4], "uv_size": [2, 3]},
 								"east": {"uv": [27, 37], "uv_size": [1, 3]},
@@ -187,13 +203,13 @@
 				{
 					"name": "mouth",
 					"parent": "head",
-					"pivot": [-0.0038, 11.96586, -10.43069],
+					"pivot": [-0.00317, 9.97155, -8.69224],
 					"rotation": [-2.5, 0, 0],
 					"cubes": [
 						{
-							"origin": [-1.12276, 9.7819, -11.24246],
-							"size": [2.23789, 2.65812, 2.16704],
-							"pivot": [-0.0038, 10.82002, -10.12237],
+							"origin": [-0.93563, 8.15158, -9.36872],
+							"size": [1.86491, 2.1151, 1.80587],
+							"pivot": [-0.00317, 9.01668, -8.43531],
 							"rotation": [2.5, 0, 0],
 							"uv": {
 								"north": {"uv": [45, 17], "uv_size": [3, 3]},
@@ -209,11 +225,11 @@
 				{
 					"name": "front_right_leg",
 					"parent": "body",
-					"pivot": [-1.45375, 8.864, -6.69016],
+					"pivot": [-1.21146, 7.38667, -5.57513],
 					"cubes": [
 						{
-							"origin": [-2.46089, 5.19004, -8.06912],
-							"size": [2.01427, 5.68613, 3.00962],
+							"origin": [-2.05074, 4.32503, -6.72427],
+							"size": [1.67856, 4.73844, 2.30802],
 							"uv": {
 								"north": {"uv": [11, 36], "uv_size": [2, 6]},
 								"east": {"uv": [29, 11], "uv_size": [3, 6]},
@@ -228,11 +244,11 @@
 				{
 					"name": "front_right_leg_2",
 					"parent": "front_right_leg",
-					"pivot": [-1.60812, 5.18256, -6.18074],
+					"pivot": [-1.3401, 4.3188, -5.15062],
 					"cubes": [
 						{
-							"origin": [-2.36347, 0.54403, -7.06199],
-							"size": [1.5107, 5.26348, 2.00249],
+							"origin": [-1.96956, 0.45336, -5.88499],
+							"size": [1.25892, 4.38623, 1.46874],
 							"uv": {
 								"north": {"uv": [38, 27], "uv_size": [2, 5]},
 								"east": {"uv": [38, 32], "uv_size": [2, 5]},
@@ -247,11 +263,11 @@
 				{
 					"name": "front_right_foot",
 					"parent": "front_right_leg_2",
-					"pivot": [-1.60812, 1.1549, -6.8664],
+					"pivot": [-1.3401, 0.96242, -5.722],
 					"cubes": [
 						{
-							"origin": [-2.40886, 0.00496, -7.81567],
-							"size": [1.60149, 1.13838, 1.99586],
+							"origin": [-2.00572, 0.0058, -6.51139],
+							"size": [1.33124, 0.94532, 1.45988],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [44, 14], "uv_size": [2, 1]},
@@ -267,11 +283,11 @@
 				{
 					"name": "front_left_leg",
 					"parent": "body",
-					"pivot": [1.45375, 8.864, -6.69016],
+					"pivot": [1.21146, 7.38667, -5.57513],
 					"cubes": [
 						{
-							"origin": [0.44662, 5.19004, -8.06912],
-							"size": [2.01427, 5.68613, 3.00962],
+							"origin": [0.37218, 4.32503, -6.72427],
+							"size": [1.67856, 4.73844, 2.30802],
 							"uv": {
 								"north": {"uv": [13, 33], "uv_size": [2, 6]},
 								"east": {"uv": [12, 27], "uv_size": [3, 6]},
@@ -286,11 +302,11 @@
 				{
 					"name": "front_left_leg_2",
 					"parent": "front_left_leg",
-					"pivot": [1.60812, 5.18256, -6.18074],
+					"pivot": [1.3401, 4.3188, -5.15062],
 					"cubes": [
 						{
-							"origin": [0.85277, 0.54403, -7.06199],
-							"size": [1.5107, 5.26348, 2.00249],
+							"origin": [0.71064, 0.45336, -5.88499],
+							"size": [1.25892, 4.38623, 1.46874],
 							"uv": {
 								"north": {"uv": [37, 17], "uv_size": [2, 5]},
 								"east": {"uv": [37, 22], "uv_size": [2, 5]},
@@ -305,11 +321,11 @@
 				{
 					"name": "front_left_foot",
 					"parent": "front_left_leg_2",
-					"pivot": [1.60812, 1.1549, -6.55766],
+					"pivot": [1.3401, 0.96242, -5.46472],
 					"cubes": [
 						{
-							"origin": [0.80738, 0.00496, -7.81567],
-							"size": [1.60149, 1.13838, 1.99586],
+							"origin": [0.67448, 0.0058, -6.51139],
+							"size": [1.33124, 0.94532, 1.45988],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [4, 44], "uv_size": [2, 1]},
@@ -325,11 +341,11 @@
 				{
 					"name": "back_right_leg",
 					"parent": "body",
-					"pivot": [-1.45375, 9.5348, 3.50263],
+					"pivot": [-1.21146, 7.94567, 2.91886],
 					"cubes": [
 						{
-							"origin": [-2.7077, 5.04812, 1.37333],
-							"size": [2.50791, 5.99242, 4.5104],
+							"origin": [-2.25475, 4.20843, 1.24611],
+							"size": [2.08659, 4.99035, 3.55533],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [6, 27], "uv_size": [3, 6]},
@@ -345,11 +361,11 @@
 				{
 					"name": "back_right_calf",
 					"parent": "back_right_leg",
-					"pivot": [-1.45375, 7.32032, 4.88744],
+					"pivot": [-1.21146, 6.10027, 4.07287],
 					"cubes": [
 						{
-							"origin": [-2.46089, 4.26383, 3.38848],
-							"size": [2.01427, 3.52498, 3.00962],
+							"origin": [-2.05074, 3.55319, 2.92373],
+							"size": [1.67856, 2.93748, 2.30802],
 							"uv": {
 								"north": {"uv": [40, 0], "uv_size": [2, 4]},
 								"east": {"uv": [35, 31], "uv_size": [3, 4]},
@@ -360,8 +376,8 @@
 							}
 						},
 						{
-							"origin": [-2.2091, 0.54403, 4.39561],
-							"size": [1.5107, 3.7198, 2.00249],
+							"origin": [-1.84092, 0.45336, 3.76301],
+							"size": [1.25892, 3.09983, 1.46874],
 							"uv": {
 								"north": {"uv": [4, 40], "uv_size": [2, 4]},
 								"east": {"uv": [40, 24], "uv_size": [2, 4]},
@@ -376,11 +392,11 @@
 				{
 					"name": "back_right_foot",
 					"parent": "back_right_calf",
-					"pivot": [-1.45375, 1.30927, 4.7112],
+					"pivot": [-1.21146, 1.09106, 3.926],
 					"cubes": [
 						{
-							"origin": [-2.2545, 0.00496, 3.64193],
-							"size": [1.60149, 1.13838, 1.99586],
+							"origin": [-1.87708, 0.0058, 3.13661],
+							"size": [1.33124, 0.94532, 1.45988],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [44, 0], "uv_size": [2, 1]},
@@ -396,11 +412,11 @@
 				{
 					"name": "back_left_leg",
 					"parent": "body",
-					"pivot": [1.45375, 9.5348, 3.50263],
+					"pivot": [1.21146, 7.94567, 2.91886],
 					"cubes": [
 						{
-							"origin": [0.19979, 5.04812, 1.37333],
-							"size": [2.50791, 5.99242, 4.5104],
+							"origin": [0.16816, 4.20843, 1.24611],
+							"size": [2.08659, 4.99035, 3.55533],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [0, 27], "uv_size": [3, 6]},
@@ -416,11 +432,11 @@
 				{
 					"name": "back_left_calf",
 					"parent": "back_left_leg",
-					"pivot": [1.45375, 7.32032, 4.88744],
+					"pivot": [1.21146, 6.10027, 4.07287],
 					"cubes": [
 						{
-							"origin": [0.44662, 4.26383, 3.38848],
-							"size": [2.01427, 3.52498, 3.00962],
+							"origin": [0.37218, 3.55319, 2.92373],
+							"size": [1.67856, 2.93748, 2.30802],
 							"uv": {
 								"north": {"uv": [36, 0], "uv_size": [2, 4]},
 								"east": {"uv": [34, 15], "uv_size": [3, 4]},
@@ -431,8 +447,8 @@
 							}
 						},
 						{
-							"origin": [0.6984, 0.54403, 4.39561],
-							"size": [1.5107, 3.7198, 2.00249],
+							"origin": [0.582, 0.45336, 3.76301],
+							"size": [1.25892, 3.09983, 1.46874],
 							"uv": {
 								"north": {"uv": [19, 39], "uv_size": [2, 4]},
 								"east": {"uv": [39, 20], "uv_size": [2, 4]},
@@ -447,11 +463,11 @@
 				{
 					"name": "back_left_foot",
 					"parent": "back_left_calf",
-					"pivot": [1.45375, 1.30927, 4.7112],
+					"pivot": [1.21146, 1.09106, 3.926],
 					"cubes": [
 						{
-							"origin": [0.65301, 0.00496, 3.64193],
-							"size": [1.60149, 1.13838, 1.99586],
+							"origin": [0.54584, 0.0058, 3.13661],
+							"size": [1.33124, 0.94532, 1.45988],
 							"inflate": 0.01,
 							"uv": {
 								"north": {"uv": [35, 43], "uv_size": [2, 1]},
@@ -467,57 +483,19 @@
 				{
 					"name": "tail",
 					"parent": "body",
-					"pivot": [0, 10.66771, 6.84589],
+					"pivot": [0, 8.88976, 5.70491],
 					"rotation": [90, -1, 0],
 					"cubes": [
 						{
-							"origin": [-1.36585, 4.26972, 4.94012],
-							"size": [2.70575, 6.55745, 2.80074],
+							"origin": [-0.83821, 6.7581, 4.41677],
+							"size": [1.65479, 2.26454, 2.03395],
 							"uv": {
-								"north": {"uv": [19, 32], "uv_size": [2, 7]},
-								"east": {"uv": [0, 33], "uv_size": [2, 7]},
-								"south": {"uv": [2, 33], "uv_size": [2, 7]},
-								"west": {"uv": [4, 33], "uv_size": [2, 7]},
+								"north": {"uv": [19, 32], "uv_size": [2, 2]},
+								"east": {"uv": [0, 33], "uv_size": [2, 2]},
+								"south": {"uv": [2, 33], "uv_size": [2, 2]},
+								"west": {"uv": [4, 33], "uv_size": [2, 2]},
 								"up": {"uv": [17, 42], "uv_size": [2, 2]},
 								"down": {"uv": [21, 44], "uv_size": [2, -2]}
-							}
-						}
-					]
-				},
-				{
-					"name": "tail_bottom",
-					"parent": "tail",
-					"pivot": [-0.01298, 4.21961, 6.5205],
-					"cubes": [
-						{
-							"origin": [-1.06363, -2.47338, 5.15611],
-							"size": [2.10131, 7.37798, 2.36876],
-							"uv": {
-								"north": {"uv": [34, 36], "uv_size": [1, 8]},
-								"east": {"uv": [29, 23], "uv_size": [2, 8]},
-								"south": {"uv": [8, 37], "uv_size": [1, 8]},
-								"west": {"uv": [26, 29], "uv_size": [2, 8]},
-								"up": {"uv": [21, 12], "uv_size": [1, 2]},
-								"down": {"uv": [28, 31], "uv_size": [1, -2]}
-							}
-						}
-					]
-				},
-				{
-					"name": "bone2",
-					"parent": "tail_bottom",
-					"pivot": [-0.01298, -2.13329, 6.5205],
-					"cubes": [
-						{
-							"origin": [-1.14986, -7.30201, 5.06989],
-							"size": [2.27377, 5.16391, 2.5412],
-							"uv": {
-								"north": {"uv": [32, 36], "uv_size": [2, 5]},
-								"east": {"uv": [6, 37], "uv_size": [2, 5]},
-								"south": {"uv": [37, 7], "uv_size": [2, 5]},
-								"west": {"uv": [37, 12], "uv_size": [2, 5]},
-								"up": {"uv": [42, 24], "uv_size": [2, 2]},
-								"down": {"uv": [25, 44], "uv_size": [2, -2]}
 							}
 						}
 					]
